ssl_mutual_auth/build/log/idf_py_stdout_output_11580
[1/19] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\kien\Downloads\esp32\ssl_mutual_auth\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.0_py3.8_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.0/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/kien/Downloads/esp32/ssl_mutual_auth/build/bootloader/bootloader.bin"
Bootloader binary size 0x6710 bytes. 0x8f0 bytes (8%) free.
[2/17] Building C object esp-idf/app_mqtt/CMakeFiles/__idf_app_mqtt.dir/app_mqtt.c.obj
FAILED: esp-idf/app_mqtt/CMakeFiles/__idf_app_mqtt.dir/app_mqtt.c.obj 
ccache C:\Espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -IC:/Users/kien/Downloads/esp32/ssl_mutual_auth/build/config -IC:/Users/kien/Downloads/esp32/ssl_mutual_auth/common/app_mqtt -IC:/Espressif/frameworks/esp-idf-v5.0/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.0/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.0/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_hw_support/port/esp32/private_include -IC:/Espressif/frameworks/esp-idf-v5.0/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/soc/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.0/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.0/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.0/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.0/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/lwip/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/lwip/port/esp32/include/arch -IC:/Espressif/frameworks/esp-idf-v5.0/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.0/components/driver/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_ringbuf/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_timer/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_wifi/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_event/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_phy/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_phy/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_netif/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_partition/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/mqtt/esp-mqtt/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/tcp_transport/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp-tls -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp-tls/esp-tls-crypto -IC:/Espressif/frameworks/esp-idf-v5.0/components/mbedtls/port/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/mbedtls/mbedtls/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/mbedtls/mbedtls/library -IC:/Espressif/frameworks/esp-idf-v5.0/components/mbedtls/esp_crt_bundle/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/json/cJSON -IC:/Users/kien/Downloads/esp32/ssl_mutual_auth/common/app_ota -IC:/Espressif/frameworks/esp-idf-v5.0/components/app_update/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/bootloader_support/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/bootloader_support/bootloader_flash/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_app_format/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_http_client/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_https_ota/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=C:/Users/kien/Downloads/esp32/ssl_mutual_auth=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.0=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -Wno-format -MD -MT esp-idf/app_mqtt/CMakeFiles/__idf_app_mqtt.dir/app_mqtt.c.obj -MF esp-idf\app_mqtt\CMakeFiles\__idf_app_mqtt.dir\app_mqtt.c.obj.d -o esp-idf/app_mqtt/CMakeFiles/__idf_app_mqtt.dir/app_mqtt.c.obj -c C:/Users/kien/Downloads/esp32/ssl_mutual_auth/common/app_mqtt/app_mqtt.c
C:/Users/kien/Downloads/esp32/ssl_mutual_auth/common/app_mqtt/app_mqtt.c:38:8: error: unknown type name 'otaConfig'
   38 | extern otaConfig otaC;
      |        ^~~~~~~~~
C:/Users/kien/Downloads/esp32/ssl_mutual_auth/common/app_mqtt/app_mqtt.c: In function 'receivemsg_task':
C:/Users/kien/Downloads/esp32/ssl_mutual_auth/common/app_mqtt/app_mqtt.c:72:31: error: 'msg' undeclared (first use in this function)
   72 |     cJSON *root = cJSON_Parse(msg);
      |                               ^~~
C:/Users/kien/Downloads/esp32/ssl_mutual_auth/common/app_mqtt/app_mqtt.c:72:31: note: each undeclared identifier is reported only once for each function it appears in
C:/Users/kien/Downloads/esp32/ssl_mutual_auth/common/app_mqtt/app_mqtt.c:83:13: warning: unused variable 'dcmm' [-Wunused-variable]
   83 |         int dcmm =atoi(params->valuestring);
      |             ^~~~
At top level:
C:/Users/kien/Downloads/esp32/ssl_mutual_auth/common/app_mqtt/app_mqtt.c:34:20: warning: 'tag_json' defined but not used [-Wunused-variable]
   34 | static const char *tag_json = "json";
      |                    ^~~~~~~~
[3/17] Building C object esp-idf/sensor/CMakeFiles/__idf_sensor.dir/sensor.c.obj
In file included from C:/Users/kien/Downloads/esp32/ssl_mutual_auth/common/sensor/sensor.c:9:
C:/Espressif/frameworks/esp-idf-v5.0/components/driver/deprecated/driver/adc.h:19:2: warning: #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively" [-Wcpp]
   19 | #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively"
      |  ^~~~~~~
[4/17] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj
ninja: build stopped: subcommand failed.
